2011-06-15  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        [Chromium][Qt] Some slider clicking tests fail.
        https://bugs.webkit.org/show_bug.cgi?id=62683

        * fast/forms/slider-mouse-events-expected.txt:
        * fast/forms/slider-mouse-events.html: Add step=5 to ignore small difference of thumb sizes.
        * platform/chromium-win/fast/forms/slider-mouse-events-expected.txt: Removed.
        * platform/chromium/test_expectations.txt:
        * platform/qt/Skipped: slider-onchange-event.html should pass by this change.

2011-06-15  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, whitespace change to force a build.

        * platform/chromium/test_expectations.txt:

2011-06-15  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, expectations change.

        Refine expectations to eliminate some unexpected passes.

        * platform/chromium/test_expectations.txt:

2011-06-15  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, expectations change.

        Refine expectations to eliminate some unexpected passes.

        * platform/chromium/test_expectations.txt:

2011-06-15  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, expectations change.

        Add Mac Leopard baselines for the new CSS2.1 tests added in
        r88913.

        * platform/chromium-mac-leopard/css2.1/20110323/absolute-non-replaced-height-001-expected.png: Added.
        * platform/chromium-mac-leopard/css2.1/20110323/absolute-non-replaced-height-002-expected.png: Added.
        * platform/chromium-mac-leopard/css2.1/20110323/absolute-non-replaced-height-003-expected.png: Added.
        * platform/chromium-mac-leopard/css2.1/20110323/absolute-non-replaced-height-004-expected.png: Added.
        * platform/chromium-mac-leopard/css2.1/20110323/absolute-non-replaced-height-005-expected.png: Added.
        * platform/chromium-mac-leopard/css2.1/20110323/absolute-non-replaced-height-006-expected.png: Added.